fix: Layout bug with message card

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -94,7 +94,6 @@ button {
     a {
         margin-top: 1rem;
         font-size: 12px;
-        color: #0284c7;
     }
 
     a:hover {
